src/assets/stylus/components/recipe-print-area.styl
.recipe-print-area {

    position: absolute;

    top: 0;
    bottom: 0;
    left: 0;
    right: 0;

    background-color: white;
    color: black !important;

    z-index: 5432;

    table {
        margin-bottom: 0;

        td {
            padding: 2px !important;
            margin: 0 !important;
        }
    }


    .recipe-breakdown, .recipe-totals, .summary {
        padding: 5px;
        border: 1px solid #e0e0e0;
        border-radius: 5px;
    }

    .notes {
        padding: 10px;
        border: 1px solid e0e0e0;
        border-radius: 5px;

        p {
            margin-bottom: 0.1em;
        }
    }
}

